[package]
name = "config-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { version="0.8", features = ["v4"]}
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
log = "0.4.16"
env_logger = "0.9.0"
clap = { version = "3.1.12", features = ["derive"] }

[dependencies.rocksdb]
version = "0.18.0"
default-features = false
features = ["lz4", "multi-threaded-cf"]